# bazel-python-idea

./: BUILD.bazel  WORKSPACE.bazel
src/lib_a/: BUILD.bazel
src/lib_b/: BUILD.bazel
src/project_alpha/: BUILD.bazel
src/project_beta/: BUILD.bazel
src/project_special/: BUILD.bazel
