compile_pip_requirements(
  name = "requirements",
  deps = [
    "//src/project_alpha",
    "//src/project_beta",
  ],
  requirements_txt = "requirements.lock",
)

# $ bazel build //:requirements && cat bazel-bin/requirements.in
# boto3 ~= 1.26.97, >= 1.10.4
# requests ~= 2.28.2, >= 2.12.0


compile_pip_requirements(
  name = "requirements_special",
  deps = [
    "//src/project_special",
  ],
  requirements_txt = "requirements_special.lock",
)

# $ bazel build //:requirements_special && cat bazel-bin/requirements_special.in
# boto3 == 1.25.5
# requests ~= 2.28.2

