load("@pip//:defs.bzl", "py_binary")

py_binary(
  name = "project_alpha",
  deps = [
    "//src/lib_a",
    "//src/lib_b",
  ],
  requirements = [
    "boto3 ~= 1.26.97",
  ],
)

# $ bazel build //src/project_alpha:project_alpha.requirements && cat bazel-bin/src/project_alpha.requirements
# boto3 ~= 1.26.97
# requests ~= 2.28.2, >= 2.12.0

